# execut_retro_input

./: Cargo.toml  readme.md
assets/: adjectives.txt  nouns.txt
src/: context.rs  dum_scene.rs  event_handler.rs  execut_api.rs  execut_http_client.rs  frame_buffer.rs  gl_buffers.rs  helpers.rs  main.rs  nickname_generator.rs  noise_scene.rs  printer.rs  render_pass.rs  retrofy_scene.rs  scene.rs  shader_compiler.rs  spaceship_settings.rs  text_scene.rs
src/shader/: frag.glsl  frame.frag.glsl  noise.frag.glsl  retrofy.frag.glsl  retrofy.vert.glsl  text.frag.glsl  text.vert.glsl
src/text/: input.txt
src/text_scene/: cost_calculator.rs  selected_input.rs  text_scene_text.rs
